controllers/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector:
    app: ogx
    app.kubernetes.io/instance: ""  # Will be set by field transformation
  ports:
  - name: http
    protocol: TCP
  - name: metrics
    port: 9464
    targetPort: 9464
    protocol: TCP
